Bug 103639 - EMF+ picture not shown - Aspirin in ChemDraw
Summary: EMF+ picture not shown - Aspirin in ChemDraw
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Bartosz
URL:
Whiteboard: target:5.4.0
Keywords: filter:emf
Depends on:
Blocks: EMF-WMF
  Show dependency treegraph
 
Reported: 2016-11-02 08:46 UTC by Oliver Sander
Modified: 2017-08-24 17:25 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
File containing the problematic image (17.46 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2016-11-02 08:46 UTC, Oliver Sander
Details
MSWORD 2010 (7.19 KB, image/png)
2016-11-02 08:55 UTC, Xisco Faulí
Details
EMF image extracted from docx document (9.30 KB, image/emf)
2017-03-31 22:19 UTC, Bartosz
Details
File compared in MSO 2010 and LO 6.0+ with EMF+ (27.00 KB, image/jpeg)
2017-08-24 17:17 UTC, Timur
Details
File compared in MSO 2010 and LO 6.0+ before and with new EMF+ (43.70 KB, image/jpeg)
2017-08-24 17:24 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Sander 2016-11-02 08:46:09 UTC
Description:
docx test document should show the molecular structure of Aspirin, but it doesn't.  It does show when I set EMF_PLUS_DISABLE, so it must be some shortcoming of the new EMF+ filter.

Actual Results:  
No image

Expected Results:
Show the image


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (X11; Linux x86_64; rv:46.0) Gecko/20100101 Firefox/46.0
Comment 1 Oliver Sander 2016-11-02 08:46:46 UTC
Created attachment 128431 [details]
File containing the problematic image
Comment 2 Xisco Faulí 2016-11-02 08:55:21 UTC
Confirmed in

- Version: 5.3.0.0.alpha1+
Build ID: 64d3bd38c9242c1cc114f6e68bf13475ef679b73
CPU Threads: 4; OS Version: Linux 4.2; UI Render: default; VCL: gtk2; Layout Engine: old; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

- Version: 4.3.0.0.alpha1+
Build ID: c15927f20d4727c3b8de68497b6949e72f9e6e9e

- LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4
Comment 3 Xisco Faulí 2016-11-02 08:55:51 UTC
Created attachment 128432 [details]
MSWORD 2010
Comment 4 Bartosz 2017-03-31 22:19:15 UTC
Created attachment 132300 [details]
EMF image extracted from docx document
Comment 5 Bartosz 2017-04-01 01:57:43 UTC
Review is available at:
https://gerrit.libreoffice.org/#/c/35991/1

It displaying correctly for me.
Comment 6 Bartosz 2017-04-01 02:32:58 UTC
*** Bug 39327 has been marked as a duplicate of this bug. ***
Comment 7 Bartosz 2017-04-02 19:16:51 UTC
*** Bug 102321 has been marked as a duplicate of this bug. ***
Comment 8 Commit Notification 2017-04-27 14:29:21 UTC
Bartosz Kosiorek committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e31c535b574fc37e6961c5ce7bd507a30e6abff1

tdf#47243 tdf#39327 tdf#103639 Proper scaling of SetPageTransform

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Bartosz 2017-04-27 21:44:16 UTC
*** Bug 102321 has been marked as a duplicate of this bug. ***
Comment 10 Patrick Jaap 2017-04-28 12:06:25 UTC Comment hidden (obsolete)
Comment 11 Bartosz 2017-05-05 00:11:21 UTC
*** Bug 31814 has been marked as a duplicate of this bug. ***
Comment 12 Timur 2017-08-24 17:17:35 UTC Comment hidden (obsolete)
Comment 13 Timur 2017-08-24 17:24:20 UTC
Created attachment 135769 [details]
File compared in MSO 2010 and LO 6.0+ before and with new EMF+

This patch showed image, but wasn't not completely correct.
New EMF+ solved a lot of issues and this one is fine now.
https://cgit.freedesktop.org/libreoffice/core/commit/?id=ebc11ae0b132eefd3b1b1a837a8d0ad3ba73b460