tdf#103639 Add support of EMF+ Dual mode

The EMF+ Header record contains flags that distinguish between two different types of EMF+
metafile:
- Metafiles identified as "EMF+ Only" can contain both EMF+ records and EMF records. All EMF+
records are used to render the image, but only EMF records are processed that are bracketed by
an EMF+ Get Device Context record and the next group of EMF+ records—Case II in the figure
above. EMF record processing stops when the next EMF+ record of any type is encountered. If an
Get Device Context record is not present in the metafile, as in Case I, EMF records cannot
be processed at all.
- Metafiles identified as "EMF+ Dual" can also contain both EMF+ records and EMF records. Either
type of record can be used to render the image, only EMF+ records, or only EMF records. In fact,
an EMF+ Dual metafile can contain two complete specifications of an image: one using EMF+
records, and the other using EMF records. This feature makes it possible to render an image with
different levels of graphics support in the operating system. However, only one or the other type
of records is processed.

With this commit I added "EMF+ Dual" to import.

Change-Id: I70ee3ca03a661783a7f2e6e298a2179c7713c6c4