vcl/source/filter/wmf/enhwmf.cxx
@@ -411,6 +411,7 @@ EnhWMFReader::EnhWMFReader(SvStream& rStream,GDIMetaFile& rGDIMetaFile,FilterCon
     , bRecordPath(false)
     , nRecordCount(0)
     , bEMFPlus(false)
+    , bEMFPlusDualMode(false)
 {}
 
 EnhWMFReader::~EnhWMFReader()
@@ -418,23 +419,6 @@ EnhWMFReader::~EnhWMFReader()
 
 void EnhWMFReader::ReadEMFPlusComment(sal_uInt32 length, bool& bHaveDC)
 {
-    if (!bEMFPlus) {
-        pOut->PassEMFPlusHeaderInfo();
-
-#if OSL_DEBUG_LEVEL > 1
-        // debug code - write the stream to debug file /tmp/emf-stream.emf
-        sal_uInt64 const pos = pWMF->Tell();
-        pWMF->Seek(0);
-        SvFileStream file( OUString( "/tmp/emf-stream.emf" ), StreamMode::WRITE | StreamMode::TRUNC );
-
-        pWMF->WriteStream(file);
-        file.Flush();
-        file.Close();
-
-        pWMF->Seek( pos );
-#endif
-
-    }
     bEMFPlus = true;
 
     sal_uInt64 const pos = pWMF->Tell();
@@ -459,24 +443,24 @@ void EnhWMFReader::ReadEMFPlusComment(sal_uInt32 length, bool& bHaveDC)
 
         SAL_INFO ("vcl.emf", "\t\tEMF+ record type: " << std::hex << type << std::dec);
 
+        if( type == 0x4001 ) // EmfPlusHeader
+        {
+            if( flags & 0x0001 )
+                bEMFPlusDualMode = true;
+        }
+
         // Get Device Context
-        // TODO We should use  EmfPlusRecordType::GetDC instead
-        if( type == 0x4004 )
+        // TODO We should use EmfPlusRecordType::GetDC instead of magic number
+        if( type == 0x4004 ) // EmfPlusGetDC
         {
             bHaveDC = true;
             SAL_INFO ("vcl.emf", "\t\tEMF+ lock DC (device context)");
         }
 
-        // Get the length of the remaining data of this record based
-        // on the alleged size
-        sal_uInt32 nRemainingRecordData = size >= nRequiredHeaderSize ?
-            size-nRequiredHeaderSize : 0;
-        // clip to available size
-        nRemainingRecordData = std::min(nRemainingRecordData, nRemainder);
-        pWMF->SeekRel(nRemainingRecordData);
-        nRemainder -= nRemainingRecordData;
+        pWMF->SeekRel(dataSize);
+        nRemainder -= dataSize;
     }
-    pWMF->SeekRel(nRemainder);
+    assert(nRemainder == 0);
 }
 
 /**
@@ -717,7 +701,7 @@ bool EnhWMFReader::ReadEnhWMF()
                 }
             }
         }
-        else if( !bEMFPlus || bHaveDC || nRecType == EMR_EOF )
+        else if( !bEMFPlus || bHaveDC || bEMFPlusDualMode || nRecType == EMR_EOF )
         {
             switch( nRecType )
             {
